--- a/templates/courses/request_certificate_buttons.html
+++ b/templates/courses/request_certificate_buttons.html
@@ -2,25 +2,26 @@
 
 <h3>Estado del cert_request: {{ cert_request.accepted }}</h3>
 
-{% if cert_request.accepted == True %}  {# Ya obtuvo un certificado #}
+
+{% if cert_request.state == "ACCEPTED" %}  {# Ya obtuvo un certificado #}
     <div class="text-right">
         <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}"  width="20px" alt="">
         Tienes un <a href="{% url 'profile_certificates' %}">certificado</a> de este evento.
     </div>
-{% elif cert_request.accepted == None %} {# Todavia no decide el profesor #}
+{% elif cert_request.state == "PENDING" %} {# Todavia no decide el profesor #}
     <div class="text-right">
-        <button type="button" data-id="{{ cert_request.event.id }}" class="btn btn-warning mb-2 cancel_cert_request">
+        <button type="button" data-id="{{ cert_request.id }}" class="btn btn-warning mb-2 cancel_cert_request">
             <i class="fa fa-times"></i> Eliminar Solicitud de Certificado!</button>
     </div>
-{% elif cert_request.accepted == False %}
+{% elif cert_request.state == "REJECTED" %}
     <div class="text-right">
-        <button type="button" data-id="{{ cert_request.event.id }}" class="btn mb-2 btn-disabled disabled">
+        <button type="button" data-id="{{ cert_request.id }}" class="btn mb-2 btn-disabled disabled">
             <i class="fa fa-times"></i> Certificado Rechazado</button>
         <small class="form-text text-muted">
           Si tienes dudas por favor comunícate con el organizador del evento.
         </small>
     </div>
-{% elif cert_request.deleted %}
+{% elif cert_request.state == "DELETED" %}
     <div class="text-right">
         <button type="button" data-id="{{ cert_request.event.id }}" class="btn btn-primary mb-2 request_certificate">
             <i class="fa fa-certificate"></i> Volver a Solicitar Certificado</button>
