#82 user profile events

--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -243,7 +243,7 @@
 								<i class="fa fa-calendar text-white" aria-hidden="true"></i>
 							</div>
 							<div class="media-body">
-                                <h4 class="text-uppercase text-secondary mt-0 font-weight-bold">Cuándo?</h4>
+                                <h4 class="text-uppercase text-secondary mt-0 font-weight-bold">¿Cuándo?</h4>
                                 {% if event.is_recorded %}
                                     <p class="text-muted font-weight-bold">Grabado el {{ event.date_recorded|date:"SHORT_DATE_FORMAT" }}</p>
                                 {% else %}
